--- a/diamm/templates/website/person/person_detail.jinja2
+++ b/diamm/templates/website/person/person_detail.jinja2
@@ -1,38 +1,48 @@
 {% extends "base.jinja2" %}
 
 {% block body %}
-    <div class="col-md-12">
-        <h1>{{ content.full_name }}</h1>
+    <h1>{{ content.full_name }}</h1>
+    {% if content.biography %}
+    <div>
+        <h3>Biography</h3>
+        {% for note in content.biography %}
+            {{ note.note | linebreaks }}
+        {% endfor %}
     </div>
-
-    <div class="row">
-        <div class="col-md-2">
-            <ul class="nav nav-pills nav-stacked">
-                <li class="active"><a href="#bio" data-toggle="tab">Biography</a></li>
-                <li><a href="#compositions" data-toggle="tab">Compositions</a></li>
-            </ul>
-        </div>
-        <div class="col-md-10 tab-content">
-            <div class="tab-pane active" id="bio">
-                <h2>Biography</h2>
-                {% for note in content.biography %}
-                    {{ note.note | linebreaks }}
-                {% endfor %}
-            </div>
-            <div class="tab-pane" id="compositions">
-            {% if content.compositions %}
-                <h2>Compositions</h2>
-                <ul>
-                    {% for composition in content.compositions %}
-                        <li><a href="{{ composition.url }}">{{ composition.name }} </a>
-                            {% if composition.uncertain %}
-                                (uncertain)
-                            {% endif %}
-                        </li>
-                    {% endfor %}
-                </ul>
-            {% endif %}
-            </div>
-        </div>
-    </div>
+    {% endif %}
+    {% if content.compositions %}
+        <h3>Compositions</h3>
+        <ul>
+            {% for composition in content.compositions %}
+                <li>
+                    <a href="{{ composition.url }}">
+                        {{ "? " if composition.uncertain else "" }}{{ composition.title }}
+                    </a>
+                    {% if composition.sources %}
+                        <ul>
+                        {% for source in composition.sources %}
+                            <li><a href="{{ source.url }}">{{ source.name }}</a></li>
+                        {% endfor %}
+                        </ul>
+                    {% endif %}
+                </li>
+            {% endfor %}
+        </ul>
+    {% endif %}
+    {% if content.copied_sources %}
+        <h3>Sources Copied</h3>
+        <ul>
+        {% for source in content.copied_sources %}
+            <li>{{ "? " if source.uncertain else "" }}<a href="{{ source.url }}">{{ source.source }}</a> ({{ source.copyist_type }})</li>
+        {% endfor %}
+        </ul>
+    {% endif %}
+    {% if content.related_sources %}
+        <h3>Other Relationships to Sources</h3>
+        <ul>
+        {% for source in content.related_sources %}
+            <li>{{ "? " if source.uncertain else "" }}<a href="{{ source.url }}">{{ source.source }}</a> ({{ source.relationship }})</li>
+        {% endfor %}
+        </ul>
+    {% endif %}
 {% endblock %}
