--- a/diamm/templates/website/source/source_detail_block.jinja2
+++ b/diamm/templates/website/source/source_detail_block.jinja2
@@ -85,7 +85,7 @@
                         <td>
                             <ul class="no-style">
                                 {% for link in content.links %}
-                                <a href="{{ link.link }}">{{ link.link_text }}</a>
+                                <li><a href="{{ link.link }}">{{ link.link_text }}</a></li>
                                 {% endfor %}
                             </ul>
                         </td>
@@ -97,21 +97,23 @@
                         <td>
                             <ul class="no-style">
                                 {%- for entry in content.provenance -%}
+                                <li>
                                     {%- if entry.entity -%}
-                                        {{ "? " if entity_uncertain else "" }}<a href="{{ entry.entity.url }}">{{ entry.entity.name }}</a>,
+                                        {{ "? " if entity_uncertain else "" }}<a href="{{ entry.entity.url }}">{{ entry.entity.name }}</a>,&nbsp;
                                     {%- endif -%}
                                     {%- if entry.protectorate -%}
-                                        {{ "? " if entry.protectorate_uncertain else "" }}{{ entry.protectorate }},
+                                        {{ "? " if entry.protectorate_uncertain else "" }}{{ entry.protectorate }},&nbsp;
                                     {%- endif -%}
                                     {%- if entry.region -%}
-                                        {{ "? " if entry.region_uncertain else "" }}{{ entry.region }},
+                                        {{ "? " if entry.region_uncertain else "" }}{{ entry.region }},&nbsp;
                                     {%- endif -%}
                                     {%- if entry.city -%}
-                                        {{ "? " if entry.city_uncertain else "" }}{{ entry.city }},
+                                        {{ "? " if entry.city_uncertain else "" }}{{ entry.city }},&nbsp;
                                     {%- endif -%}
                                     {%- if entry.country -%}
                                         {{ "? " if entry.country_uncertain else "" }}{{ entry.country }}
                                     {%- endif -%}
+                                </li>
                                 {%- endfor -%}
                             </ul>
                         </td>
