--- a/diamm/templates/website/country/country_list.jinja2
+++ b/diamm/templates/website/country/country_list.jinja2
@@ -8,6 +8,6 @@
             <li><a href="{{ country.url }}">{{ country.name }}</a></li>
         {% endfor %}
         </ul>
-        {% include "website/blocks/browse_paginator.html" %}
+        {% include "website/blocks/browse_paginator.jinja2" %}
     </div>
 {% endblock %}
