--- a/diamm/templates/website/search/search.jinja2
+++ b/diamm/templates/website/search/search.jinja2
@@ -30,7 +30,7 @@
 
     {% if content.results %}
         {% for result in content.results %}
-        <div class="search-result">
+        <div class="search-results">
             {% include 'website/search/results/result.jinja2' %}
         </div>
         {% endfor %}
