WIP: Added organization search result template
Refs #25

--- a/diamm/templates/website/search/results/result.jinja2
+++ b/diamm/templates/website/search/results/result.jinja2
@@ -17,6 +17,8 @@
 {% macro result_body(result) %}
     {% if result.type == "composition" %}
         {% include "website/search/results/composition.jinja2" %}
+    {% elif result.type == "organization" %}
+        {% include "website/search/results/organization.jinja2" %}
     {% endif %}
 {% endmacro %}
 
