New: Search partbook sets in full text
This commit adds functionality for searching sets of partbooks using the full text search.

closes #27

--- a/diamm/templates/website/search/results/result.jinja2
+++ b/diamm/templates/website/search/results/result.jinja2
@@ -5,6 +5,8 @@
         {{ result.name_s }}
     {% elif result.type == "composition" %}
         {{ result.title_s }}
+    {% elif result.type == "set" %}
+        {{ result.cluster_shelfmark_s }}
     {% endif %}
 {% endmacro %}
 
