--- a/diamm/templates/website/search/results/result.jinja2
+++ b/diamm/templates/website/search/results/result.jinja2
@@ -20,7 +20,7 @@
 
 <div class="search-result">
     <h4>
-        {{ result_icon(result) }} <a href="{{ result.url }}">{{ result_name(result) }}</a>
+        <a href="{{ result.url }}">{{ result_name(result) }}</a>
     </h4>
     {{ result_body(result) }}
 </div>
