Fixed bug: made composers singular when there was only one composer
closes #26

--- a/diamm/templates/website/search/results/composition.jinja2
+++ b/diamm/templates/website/search/results/composition.jinja2
@@ -1,6 +1,6 @@
 <div>
     {% if result.composers_ss %}
-    <p>Composers:
+    <p>{{ result.composers_ss | length }} Composer{{ result.composers_ss | length | pluralize }}:
         {% for composer in result.composers_ss %}
             {{ composer }}{{ ", " if not loop.last else "" }}
         {% endfor %}
