--- a/diamm/templates/website/search/results/composition.jinja2
+++ b/diamm/templates/website/search/results/composition.jinja2
@@ -8,13 +8,14 @@
     {% else %}
     <p>Anonymous</p>
     {% endif %}
-    <p>Appears in {{ result.sources_ii | length }} source{{ result.sources_ii | length | pluralize }}:
-        {% for source in result.sources_ss %}
-            {% set sourcelist = source.split("|") %}
-            <a href="{{ url('source-detail', pk=sourcelist[0]) }}">{{ sourcelist[1] }}</a>{{ ", " if not loop.last else "" }}
+    <p>Appears in {{ result.sources_ii | length }} source{{ result.sources_ii | length | pluralize }}</p>
+
+    {% if result.genres_ss %}
+    <p>Genres:
+        {% for genre in result.genres_ss %}
+            {% set genrelist = genre.split("|") %}
+            {{ genrelist[0] }}{{ ", " if not loop.last else "" }}
         {% endfor %}
     </p>
-    {% if result.genres_ss %}
-    <p></p>
     {% endif %}
 </div>
