--- a/diamm/static/stylesheets/_search.scss
+++ b/diamm/static/stylesheets/_search.scss
@@ -47,11 +47,24 @@
     color: $diamm-med-grey;
   }
   .search-result {
-    .diamm-icon {
-      font-size: 75%;
-      color: $diamm-med-grey;
+    .result-type {
+      font-size: 58%;
+      color: $diamm-grey;
       position: relative;
-      top: -2px;
+      top: -1px;
+    }
+    .upper-info {
+      margin-bottom: 0rem;
+      font-size: 85%;
+      font: $sans-serif;
+    }
+    .lower-info {
+      padding-top: 0rem;
+      font-size: 95%;
+      font: $sans-serif;
+    }
+    h4 {
+      margin-bottom: 0.1rem;
     }
   }
 }
