--- a/diamm/static/stylesheets/_navbar.scss
+++ b/diamm/static/stylesheets/_navbar.scss
@@ -17,7 +17,6 @@
   li {
     margin-bottom: 0;
   }
-
   .navbar-brand {
     z-index: 10;
     padding-right: 1rem;
@@ -28,6 +27,7 @@
       a {
         margin: 0;
         padding: 0;
+        padding-left: 0.5rem;
         &:hover, &:focus {
           background: none;
           color: unset;
