--- a/diamm/templates/base.jinja2
+++ b/diamm/templates/base.jinja2
@@ -21,7 +21,7 @@
         {% endblock %}
     </div>
 
-    <footer class="footer">
+    <footer class="footer" style="text-align: center;">
         <img src="{{ static('images/oxford.png') }}">
         <img src="{{ static('images/bodleian.png') }}">
         <img src="{{ static('images/ba.png') }}">
